test/fail_compilation/fail174.d

struct S
{
    int x;
}

void main()
{
    //const (S) s;
    const S s;
    s.x = 3;
}
